# pdf-investor-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  investor_summarizer_notebook.ipynb  notebook.ipynb  pyproject.toml  run_short.py
src/pdf_investor_summarizer/: chunker.py  extractor.py  merger.py  pdf_loader.py  report_analyzer.py  text_cleaner.py
src/pdf_investor_summarizer/utils/: cache.py  cost.py  evidence.py
tests/: test_cache.py  test_chunker.py  test_extractor.py  test_merger.py  test_pdf_loader.py  test_report_analyzer.py  test_text_cleaner.py
tests/assets/: pdf_cut.py
